--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -32,79 +32,80 @@ $secondary-white:#fafafa;
 
 body{
     font-family: 'Avenir';
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.81rem;
+    line-height: 1.13rem;
     font-weight: 400;
     @include tablet{
-        font-size: 14px;
-        line-height: 22px;
+        font-size: 0.88rem;
+        line-height: 1.38rem;
         }
 }
 
 
 h1{
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 1.5rem;
+    line-height: 2rem;
     font-family: "Avenir-bold";
     font-weight: 700;
-    padding: 24px 0 16px 0;
+    padding: 1.5rem 0 1rem 0;
     @include tablet{
-        font-size: 60px;
-        line-height: 68px;
-        padding: 48px 0 36px 0;
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        padding: 3rem 0 2.25rem 0;
         }
 }
 
 h2{
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 1.5rem;
+    line-height: 2rem;
     font-family: "Avenir-bold";
     font-weight: 700;
-    padding: 24px 0 16px 0;
+    padding: 1.5rem 0 1rem 0;
     @include tablet{
-        font-size: 36px;
-        line-height: 44px;
-        padding: 48px 0 36px 0;
+        font-size: 2.25rem;
+        font-family: "Avenir";
+        line-height: 2.75rem;
+        padding: 3rem 0 2.25rem 0;
         }
 }
 
 h3{
-    font-size: 14px;
-    line-height: 22px;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
     font-family: "Avenir-demi";
     font-weight: 600;
-    padding: 24px 0 16px 0;
+    padding: 1.5rem 0 1rem 0;
     @include tablet{
-        font-size: 24px;
-        line-height: 32px;
-        padding: 48px 0 36px 0;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        padding: 3rem 0 2.25rem 0;
         }
 }
 
 button{
     color: $primary-white;
     font-family: "Avenir-bold";
-    font-size: 10px;
-    line-height: 20px;
+    font-size: 0.625rem;
+    line-height: 1.25rem;
     background: $primary-silver;
     max-height: 2rem;
     min-width: 9.375rem;
     padding: 0 2.0625em 0 2.0625em;
     border-radius: 0.25rem;
     @include tablet{
-        font-size: 12px;
-        line-height: 20px;
+        font-size: 0.75rem;
+        line-height: 1.25rem;
         background-color: $secondary-black;
         }
 }
 
 label{
-    font-size: 10px;
-    line-height: 20px;
+    font-size: 0.625rem;
+    line-height: 1.25rem;
     font-family: "Avenir-bold";
     @include tablet{
-        font-size: 12px;
-        line-height: 20px;
+        font-size: 0.75rem;
+        line-height: 1.25rem;
         }
 }
 
@@ -113,17 +114,17 @@ label{
     padding: 0 1rem;
 
     @include tablet{
-        max-width: 768px;
+        max-width: 48rem;
         padding: 0 2.25rem;
 
     }
 
     @include desktop{
-        max-width: 1280px;
+        max-width: 80rem;
     }
 }
 
 .sitelogo{
-    max-width: 120px;
-    max-height: 20px;
+    max-width: 7.5rem;
+    max-height: 1.25rem;
 }
