--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,2 +1,12 @@
 $tablet-breakpoint: 48rem;
 $desktop-breakpoint: 80rem;
+
+
+// color-variables
+$primary-black: #323232;
+$primary-silver:#afafaf;
+$primary-white: #ffffff;
+$secondary-black:#000000;
+$secondary-silver: #e1e1e1;
+$secondary-white:#fafafa;
+$invalid-red: #D22D2D;
