--- a/styles/shows.css
+++ b/styles/shows.css
@@ -167,20 +167,20 @@ body {
     align-items: center;
   }
 }
-.nav__list-item {
+.nav__list--item {
   list-style: none;
   width: 100%;
   height: 100%;
   text-align: center;
 }
-.nav__list-item:hover {
+.nav__list--item:hover {
   font-weight: 400;
   border-bottom: 0.3rem solid white;
 }
-.nav__list-item:hover a {
+.nav__list--item:hover a {
   color: #ffffff;
 }
-.nav__list-item a {
+.nav__list--item a {
   text-decoration: none;
   color: #afafaf;
   margin: 1rem;
@@ -189,7 +189,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.nava:active {
+.nav__lista:active {
   font-weight: 400;
   border-bottom: 0.3rem solid white;
 }
@@ -202,7 +202,7 @@ body {
 }
 
 .hero {
-  background: url(../asset/images/hero-bio.jpg);
+  background: url(../asset/images/Photo-gallery-3.jpg);
   background-size: cover;
   position: relative;
   height: 40vh;
@@ -228,175 +228,8 @@ body {
   color: #ffffff;
   z-index: 2;
 }
-
-.intro__details--container {
-  padding-bottom: 1rem;
-}
-@media screen and (min-width: 48rem) {
-  .intro__details--container {
-    padding: 1rem 3rem;
-  }
-}
-.intro__image-container {
-  background-size: cover;
-  position: relative;
-  height: auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-top: 0;
-  overflow: hidden;
-}
-.intro__image {
-  width: 100%;
-}
-.intro__text #text-source {
-  font-weight: 700;
-  font-size: 0.8125rem;
-}
-@media screen and (min-width: 48rem) {
-  .intro__text #text-source {
-    font-size: 0.875rem;
-  }
-}
-.intro__text--headline {
-  padding: 0;
-  padding: 0.75rem;
-}
-.intro__text--detail {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-@media screen and (min-width: 48rem) {
-  .intro__text--detail {
-    flex-direction: row;
-  }
-}
-
-.gallery {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.gallery__header {
-  padding-left: 0;
-}
-.gallery__background {
-  background-color: #e1e1e1;
-}
-.gallery__container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding-bottom: 1rem;
-}
-@media screen and (min-width: 48rem) {
-  .gallery__container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-.gallery__image {
-  width: 100%;
-  height: auto;
-  filter: grayscale(0.8);
-}
-@media screen and (min-width: 48rem) {
-  .gallery__image {
-    width: 30%;
-  }
-}
-.gallery__image:hover {
-  filter: grayscale(0);
-}
-
-.comment {
-  display: flex;
-  flex-direction: column;
-}
-.comment__divider {
-  height: 1px;
-  width: 100%;
-  background-color: #363636;
-  margin: 2px;
-}
-.comment__img {
-  max-width: 2.25rem;
-  max-height: 2.25rem;
-  border-radius: 50%;
-}
-@media screen and (min-width: 48rem) {
-  .comment__img {
-    max-width: 3rem;
-    max-height: 3rem;
-  }
-}
-.comment__input {
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  width: 100%;
-  justify-content: space-around;
-}
-.comment__input-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-self: flex-end;
-  justify-self: flex-end;
-}
-.comment__input-container button {
-  margin: 1rem 0;
-}
-.comment__area {
-  width: 100%;
-  min-height: 2.25rem;
-  height: 4rem;
-  background-color: #ffffff;
-  border: 0.0625rem solid #afafaf;
-  padding: 0.75rem;
-  margin-top: 0.25rem;
-  border-radius: 0.25rem;
-}
-.comment__area:focus {
-  border-color: #323232;
-  outline: none;
-}
-.comment__area:valid {
-  border-color: #e1e1e1;
-}
-.comment__area:not(:focus):invalid {
-  border-color: #D22D2D;
-}
-@media screen and (min-width: 48rem) {
-  .comment__area {
-    min-height: 3rem;
-    padding: 1rem;
-  }
-}
-.comment__card {
-  padding: 1rem;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.comment__text-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-.comment__userform {
-  display: flex;
-  flex-direction: column;
-}
-.comment__date {
-  color: #afafaf;
+.hero__text--detail {
+  width: 60%;
 }
 
 .footer {
@@ -522,4 +355,4 @@ body {
   .footer__logo {
     display: none;
   }
-}/*# sourceMappingURL=bio.css.map */
+}/*# sourceMappingURL=shows.css.map */
