--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,355 +1,348 @@
-@use './partials/mixins' as *;
-@use './partials/variables' as *;
-@use './partials/global' as *;
+@use "./partials/mixins" as *;
+@use "./partials/variables" as *;
+@use "./partials/global" as *;
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    height: 100%;
+body {
+  height: 100%;
 }
 
-.nav{
-    background: $primary-black;
-    color: $primary-white;
-    height: 100%;
+.nav {
+  background: $primary-black;
+  color: $primary-white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+
+  &__background {
+    background-color: $primary-black;
+  }
+
+  &__logo {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    height: auto;
+
+    &--image {
+      height: auto;
+      width: 100%;
+    }
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
     padding: 0;
+    margin: auto;
 
-    &__background{
-        background-color: $primary-black;
+    @include tablet {
+      width: 30%;
+      justify-content: center;
+      margin: 0;
+      align-items: center;
     }
 
+    &--item {
+      list-style: none;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-size: 1rem;
 
-    &__logo{
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        padding: 1rem;
-        height: auto;
+      &:hover, &.active {
+        font-weight: 400;
+        border-bottom: 0.3rem solid white;
 
-        &--image{
-            height: auto;
-            width: 100%;
+        a {
+          color: $primary-white;
         }
+      }
     }
 
-    &__list{
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        padding: 0;
-        margin: auto;
+    &--item a {
+      text-decoration: none;
+      color: $primary-silver;
+      margin: 1rem;
+      width: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-        @include tablet{
-            width: 30%;
-            justify-content: center;
-            margin: 0;
-            align-items: center;
-        }
+    &a:active {
+      font-weight: 400;
+      border-bottom: 0.3rem solid white;
+    }
+  }
 
-        
-        &--item{
-            list-style: none;
-            width: 100%;
-            height: 100%;
-            text-align: center;
+  @include tablet {
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+  }
+}
 
-            &:hover{
-                font-weight: 400;
-                border-bottom: 0.3rem solid white;
+.hero {
+  background: url(../asset/images/hero-shows.jpg);
+  background-size: cover;
+  position: relative;
+  height: 55vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0;
+  overflow: hidden;
+  max-width: 100%;
 
-                a{
-                    color: $primary-white;
-                }
-            }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(50, 50, 50, 0.5);
+    z-index: 1;
+  }
 
+  @include tablet {
+    height: 60vh;
+  }
 
-        }
+  @include desktop {
+    flex-direction: row;
+    height: 65vh;
+  }
 
-        &--item a{
-            text-decoration: none;
-            color: $primary-silver;
-            margin: 1rem;
-            width: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+  &__text {
+    color: $primary-white;
+    width: 100%;
+    z-index: 2;
 
-        &a:active{
-            font-weight: 400;
-            border-bottom: 0.3rem solid white;
-        }
+    &--detail {
+      width: 60%;
+      padding-top: 0;
 
+      @include tablet {
+        width: 75%;
+      }
+    }
+  }
+
+  &__song {
+    position: relative;
+    z-index: 3;
+    width: 100%;
+    height: auto;
+
+    @include tablet {
+      width: 50%;
+      align-self: flex-start;
+      margin: 1rem;
+    }
+
+    @include desktop {
+      width: 30%;
+      align-self: center;
+      margin: 1rem;
+    }
+  }
+}
+
+.shows {
+  width: 100%;
+
+  &__container {
+    width: 100%;
+    position: relative;
+  }
+
+  &__card {
+    width: 100%;
+    border-bottom: 0.0625rem solid $secondary-silver;
+
+    &:hover {
+      background-color: $secondary-silver;
     }
 
     @include tablet {
-        flex-direction: row;
-        width: 100%;
-        margin: 0;
+      display: flex;
+      flex-direction: row;
     }
+  }
+
+  &__subtitle {
+    font-weight: 600;
+    color: $primary-silver;
+  }
+
+  &__sub-container {
+    margin: 1rem 0;
+    @include tablet {
+      width: 100%;
+    }
+  }
+
+  &__date {
+    font-weight: 600;
+  }
+
+  button {
+    width: 100%;
+    font-size: 0.9rem;
+    font-weight: 600;
+    height: 2rem;
+    margin-bottom: 1rem;
+    z-index: 3;
+
+    @include tablet {
+      width: 20%;
+      align-self: center;
+      justify-self: flex-end;
+    }
+  }
 }
 
-.hero{
-    background: url(../asset/images/hero-shows.jpg);
-    background-size: cover;
-    position: relative;
-    height: 50vh;
-    width: 100%;
+.footer {
+  color: $primary-white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 1rem;
+  position: relative;
+
+  @include tablet {
+    padding-bottom: 2.25rem;
+  }
+
+  &__background {
+    background: $primary-black;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-top: 0;
-    overflow: hidden;
-    max-width:100%;
-
-    &::before{
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: rgba(50, 50, 50, 0.5);
-        z-index: 1;
-    }
-
-    @include tablet{
-        height: 55vh;
-    }
-
-    @include desktop{
-        flex-direction: row;
-        height: 65vh;
-    }
-
-
-    &__text{
-        padding-left: 1rem;
-        color: $primary-white;
-        z-index: 2;
-
-        &--detail{
-            width: 60%;
-            padding-top: 0;
-
-            @include tablet{
-                width: 75%;
-            }
-        }
-
-    }
-
-    &__song{
-        position: relative;
-        z-index: 3;
-        width: 80%;
-        height: auto;
-
-        @include tablet{
-            width: 50%;
-            align-self: flex-start;
-            margin: 1rem;
-        }
-
-        @include desktop{
-            width: 30%;
-            align-self: center;
-            margin: 1rem;
-        }
-    }
-}
-
-.shows{
+    justify-items: center;
     width: 100%;
+  }
 
-    &__container{
-        width: 100%;
-        position: relative;
-    }
-
-    &__card{
-        width: 100%;
-        border-bottom: 0.0625rem solid $secondary-silver;
-
-        &:hover{
-            background-color: $secondary-silver;
-        }
-
-        @include tablet{
-            display: flex;
-            flex-direction: row;
-        }
-    }
-
-    &__subtitle{
-        font-weight: 600;
-        color: $primary-silver;
-    }
-
-    &__sub-container{
-        margin: 1rem 0;
-        @include tablet{
-            width: 100%;
-        }
-    }
-
-    &__date{
-        font-weight: 600;
-    }
-
-    button{
-        width: 100%;
-        font-size: 0.9rem;
-        font-weight: 600;
-        height: 2rem;
-        margin-bottom: 1rem;
-        z-index: 3;
-
-        @include tablet{
-            width: 20%;
-            align-self: center;
-            justify-self: flex-end;
-        }
-    }
-}
-
-.footer{
-    color: $primary-white;
+  &__social {
+    display: flex;
     width: 100%;
+    height: auto;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    @include tablet {
+      flex-direction: row;
+      align-items: center;
+    }
+
+    &--header {
+      width: 50%;
+      padding-top: 1rem;
+
+      @include tablet {
+        width: 15.5rem;
+        padding-top: 2.25rem;
+      }
+
+      @include tablet {
+        width: 20rem;
+      }
+    }
+
+    &--site {
+      display: none;
+
+      @include tablet {
+        display: flex;
+        margin-left: auto;
+        justify-self: flex-end;
+      }
+    }
+  }
+
+  &__media {
+    width: 10%;
+    flex-direction: row;
+
+    &--container {
+      width: 25%;
+      height: auto;
+      justify-content: space-between;
+      display: flex;
+      flex-direction: row;
+      @include tablet {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 2em;
+      }
+    }
+
+    &--logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &__company--container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-bottom: 1rem;
+    width: 100%;
     position: relative;
 
-        @include tablet{
-            padding-bottom: 2.25rem; 
-        }
-
-
-    &__background{
-        background: $primary-black;
-        display: flex;
-        align-items: center;
-        justify-items: center;
-        width: 100%;
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
     }
 
-    &__social{
-        display: flex;
-        width: 100%;
-        height: auto;
-        flex-direction: column;
-        justify-content: flex-start;
+    @include desktop {
+      width: 70%;
+    }
+  }
 
-        @include tablet{
-            flex-direction: row;
-            align-items: center;
-        }
+  &__company {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
-
-        &--header{
-            width: 50%;
-            padding-top: 1rem;
-
-            @include tablet{
-                width: 15.5rem;
-                padding-top: 2.25rem;
-            }
-
-            @include tablet{
-                width: 20rem;
-            }
-        }
-
-        &--site{
-            display: none;
-    
-            @include tablet{
-                display: flex;
-                margin-left: auto;
-                justify-self: flex-end;
-            }
-        }
-    
+    &--detail {
+      font-weight: 700;
     }
 
-    &__media{
-        width: 10%;
-        flex-direction: row;
+    &-address{
+      width: 40%;
 
-        
-        &--container{
-            width: 25%;
-            height: auto;
-            justify-content: space-between;
-            display: flex;
-            flex-direction: row;
-            @include tablet{
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                gap: 2em;
-            }
-        }
-
-        &--logo{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+      @include tablet{
+        width: 60%;
+      }
     }
 
-
-
-    &__company--container{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-        position: relative;
-
-        @include tablet{
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-        @include desktop{
-            width: 70%;
-        }
-
+    a {
+      text-decoration: none;
+      color: $primary-white;
     }
+  }
 
-    &__company{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+  &_copyright--container {
+    position: relative;
+  }
 
+  &__logo {
+    margin: 1rem 0 1rem 0;
 
-        &--detail{
-            font-weight: 700;
-        }
-
-        a {
-            text-decoration: none;
-            color: $primary-white;
-        }
+    @include tablet {
+      display: none;
     }
-
-    &_copyright--container{
-        position: relative;
-    }
-
-    &__logo {
-        margin: 1rem 0 1rem 0;
-
-        @include tablet{
-            display: none;
-        }
-    }
-
+  }
 }
