--- a/styles/shows.css
+++ b/styles/shows.css
@@ -92,7 +92,7 @@ button:hover {
   button {
     font-size: 0.75rem;
     line-height: 1.25rem;
-    background-color: #000000;
+    background-color: #323232;
   }
 }
 
@@ -215,7 +215,7 @@ body {
   background: url(../asset/images/hero-shows.jpg);
   background-size: cover;
   position: relative;
-  height: 55vh;
+  height: 40vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -264,6 +264,12 @@ body {
   z-index: 3;
   width: 100%;
   height: auto;
+  height: 11rem;
+}
+.hero__song iframe {
+  width: 100%;
+  border: none;
+  overflow-x: hidden;
 }
 @media screen and (min-width: 48rem) {
   .hero__song {
@@ -274,7 +280,6 @@ body {
 }
 @media screen and (min-width: 80rem) {
   .hero__song {
-    width: 30%;
     align-self: center;
     margin: 1rem;
   }
