--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -16,7 +16,10 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0;
+  
+  @include desktop{
+    margin-left: 5rem;
+  }
 
   &__background {
     background-color: $primary-black;
@@ -58,7 +61,7 @@ body {
 
       &:hover, &.active {
         font-weight: 400;
-        border-bottom: 0.3rem solid white;
+        border-bottom: 0.3rem solid $secondary-white;
 
         a {
           color: $primary-white;
@@ -93,7 +96,8 @@ body {
   background: url(../asset/images/hero-shows.jpg);
   background-size: cover;
   position: relative;
-  height: 40vh;
+  background-position: center;
+  height: 45vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -114,18 +118,25 @@ body {
   }
 
   @include tablet {
-    height: 60vh;
+    height: 54vh;
+    max-height: 64vh;
   }
 
   @include desktop {
     flex-direction: row;
     height: 65vh;
+    max-height: 70vh;
   }
+
 
   &__text {
     color: $primary-white;
     width: 100%;
     z-index: 2;
+
+    @include desktop{
+      margin-left: 13rem;
+    }
 
     &--detail {
       width: 60%;
@@ -159,16 +170,28 @@ body {
     @include desktop {
       align-self: center;
       margin: 1rem;
+      margin-right: 13rem;
     }
   }
 }
 
 .shows {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  @include desktop{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
   &__container {
     width: 100%;
     position: relative;
+    @include desktop{
+      width: 80%;
+    }
   }
 
   &__card {
@@ -176,6 +199,10 @@ body {
     border-bottom: 0.0625rem solid $secondary-silver;
 
     &:hover {
+      background-color: $secondary-white;
+    }
+
+    &--active{
       background-color: $secondary-silver;
     }
 
